--- a/Bonfire/Info.plist
+++ b/Bonfire/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>写入您相册的权限</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>获取您的相册权限</string>
 	<key>NSCameraUsageDescription</key>
