--- a/Bonfire/Info.plist
+++ b/Bonfire/Info.plist
@@ -26,10 +26,13 @@
 	<string>获取您的位置</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>获取您的位置</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>获取您的麦克风权限</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>获取您的相册权限</string>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>audio</string>
 		<string>location</string>
 	</array>
 	<key>UIRequiredDeviceCapabilities</key>
